--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 body {
-      background-image: url("https://66.media.tumblr.com/0fe4907748054943713c57d121ae815e/tumblr_onl9cmiUhv1vloheso2_1280.jpg")
+      background-image: url("https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjNzerh2b7fAhXxFjQIHbqWBaEQjRx6BAgBEAU&url=https%3A%2F%2Fwww.muralswallpaper.com%2Fshop-murals%2F90s-simplistic-geo-wall-mural%2F&psig=AOvVaw1FQMbGOWjjMbWvwue8yVWE&ust=1545955121018908")
       }
