--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 body {   
-      background-image: url("https://66.media.tumblr.com/0fe4907748054943713c57d121ae815e/tumblr_onl9cmiUhv1vloheso2_1280.jpg")
+      background-image: url("http://www.bitcake.com/wp-content/uploads/2014/01/2048x2048_checker.png")
       }   
