--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 body {   
-      background-image: url("http://www.bitcake.com/wp-content/uploads/2014/01/2048x2048_checker.png")
+      background-image: url("https://images2.pixlis.com/background-image-checkers-chequered-checkered-squares-seamless-tileable-tasman-we-peep-236soq.png")
       }   
