--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 body {   
-      background-image: url("https://images2.pixlis.com/background-image-checkers-chequered-checkered-squares-seamless-tileable-tasman-we-peep-236soq.png")
+      background-image: url("http://www.mariacenoura.pt/ptpictures/f/101/1013482_christmas-aesthetic-wallpaper.jpg")
       }   
